--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "babel-polyfill": "^6.9.1",
     "babel-runtime": "^6.6.1",
     "clone": "^1.0.2",
-    "ti-mapreduce-helper": "^1.0.11",
-    "mongo-writable-stream": "^0.1.2",
+    "event-stream": "^3.3.4",
+    "mongo-writable-stream": "^0.2.0",
     "mongoose": "4.4.13",
     "mongoose-deep-populate": "^3.0.0",
     "source-map-support": "^0.4.0",
