--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "babel-polyfill": "^6.9.1",
     "babel-runtime": "^6.6.1",
     "clone": "^1.0.2",
-    "ti-mapreduce-helper": "^1.0.11",
-    "mongo-writable-stream": "^0.1.2",
+    "event-stream": "^3.3.4",
+    "mongo-writable-stream": "^0.2.0",
     "mongoose": "4.4.13",
     "mongoose-deep-populate": "^3.0.0",
     "source-map-support": "^0.4.0",
@@ -45,9 +45,9 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
